Add test file to test url helpers functions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
+    <script type="module" >
+        import {url} from "./dist/url.js"
+        alert(url('hello', 'world',{name:'Saeed'}))
+    </script>
+
 </body>
 </html>
